--- a/Lec_04/notes/setup_git.Rmd
+++ b/Lec_04/notes/setup_git.Rmd
@@ -22,17 +22,17 @@ Tools ---\> Global Option ---\> Git/SVN
 
 Click "Create SSH Key..." Leave all settings as default. You may leave "Passphrase (optional)" and "Confirm" empty.
 
-![](images/paste-EEDE0385.png)
+![](images/paste-EEDE0385.png){width="493"}
 
-![](images/paste-B7F8DC6D.png)
+![](images/paste-B7F8DC6D.png){width="495"}
 
 ### Step 2: Copy information of your SSH key
 
 After you have successfully created your SSH key, click "View public key." Copy ALL the text in the pop-up window to your clipboard.
 
-![](images/paste-74577312.png)
+![](images/paste-74577312.png){width="483"}
 
-![](images/paste-14ED5A26.png)
+![](images/paste-14ED5A26.png){width="485"}
 
 ### Step 3: Put information of your (public) SSH key in GitHub
 
@@ -44,18 +44,18 @@ Click on your profile picture at the top right corner.
 
 In the pop-up menu, click "Settings"
 
-![](images/Screenshot%202023-09-27%20at%203.10.19%20PM.png){width="348"}
+![](images/Screenshot%202023-09-27%20at%203.10.19%20PM.png){width="268"}
 
 In the navigation bar located in the column in the left, click ""SSH and GPG keys."
 
-![](images/Screenshot%202023-09-27%20at%203.10.43%20PM.png){width="319"}
+![](images/Screenshot%202023-09-27%20at%203.10.43%20PM.png){width="278"}
 
 It will open a page that lists all your existing SSH keys. Click the button "New SSH key"
 
-![](images/Screenshot%202023-09-27%20at%203.11.07%20PM.png)
+![](images/Screenshot%202023-09-27%20at%203.11.07%20PM.png){width="545"}
 
 It will open a page titled "Add new SSH Keys." In the "Title" field, you may input any name of your choice (preferably one that tells you which machine this key is stored). In the "Key" field, input the text you have copied in RStudio in **Step 2**.
 
-![](images/Screenshot%202023-09-27%20at%203.11.51%20PM.png)
+![](images/Screenshot%202023-09-27%20at%203.11.51%20PM.png){width="523"}
 
 Click the green button "Add SSH key" and GitHub will direct you back to the "SSH Key" page. If your key is added successfully, you should be able to see its title and information in the "Authentication Keys" section. You may delete it when it becomes relevant. For your account security, if you discard a device, you would definitely want to delete the SSH key associated with it.
