--- a/Lec_04/setup_git/README.Rmd
+++ b/Lec_04/setup_git/README.Rmd
@@ -1,9 +1,12 @@
 ---
 title: "How to Setup Git for Version Control"
 output: 
-  html_document:
-    keep_md: true
+  md_document: default
+  html_document: default
 date: "2023-09-23"
+knit: (function(inputFile, encoding){
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_format = "all") })
 ---
 
 ```{r setup, include=FALSE}
