Fixed a bug with output by setting knit rendering options

--- a/Lec_04/1_setup_git/README.Rmd
+++ b/Lec_04/1_setup_git/README.Rmd
@@ -6,7 +6,7 @@ output:
   md_document: default
 author: "Haohan Chen"
 date: "Last update: `r format(Sys.Date(), '%B %d, %Y')`"
-knit: (function(inputFile, encoding){rmarkdown::render(inputFile, encoding = encoding, output_format = "all") })
+knit: (function(inputFile, encoding){rmarkdown::render(inputFile, encoding = encoding, output_format = "all", knit_root_dir = getwd()) })
 ---
 
 ```{r setup, include=FALSE}
