--- a/Lec_04/2_use_git/README.Rmd
+++ b/Lec_04/2_use_git/README.Rmd
@@ -80,3 +80,9 @@ After this step, you should be able to see your local update reflected in your G
 Git is a powerful tool designed for collaboration. This note only covers some of its VERY BASIC function that can facilitate your effort to build a personal data science portfolio. We might be able to get to some of its more sophisticated functionality later in the course. [This page](https://docs.github.com/en/get-started/quickstart/git-and-github-learning-resources) lists some learning resources. You may take a look. In addition, GitHub provide students with free access to some of its advanced (paid) functionality. I encourage you to use this page to verify your student identity and get access: <https://education.github.com/pack/join>.
 
 ![](images/paste-08E34EDB.png){width="550"}
+
+## One More Thing
+
+GitHub is meant to use for storing large data. [**You will encounter technical problems when you try to push an individual data file that is over 100M**]{.underline}. And it is generally not a good practice to keep a lot of big data files in a GitHub repo. For GitHub repository we work on in this course, we will include some fairly large data files for instructional purposes --- this can help us share data and code in one place without any additional complication. In addition, the data we are working with for now are not prohibitively large for GitHub to store and synchronize. But I would like to bring to your attention that in real data science projects, data are rarely stored in GitHub repositories as we do it here.
+
+For your final project, you may encounter problem with data storage, especially when it comes to sharing your Replication Dossier with me in the end of the semester. Feel free to chat with me to find a way. In general, if your data are smaller than 100M per file, then just put them in the GitHub repository. If not, we can look for ways to split or compress them so that individual files do not exceed the limit. If that is not possible, we can explore alternative data storage and sharing solutions.
